--- a/stylesheets/addons.css
+++ b/stylesheets/addons.css
@@ -1,3 +1,10 @@
+
+@media only screen and (min-width: 860px){
+    .shuttle-table{
+        width:80%;
+    }
+}
+
 .container-stacker {
   display: grid;
 }
